<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/receiver_email"
        android:hint="@string/receiver_placeholder"/>

    <EditText
        android:id="@+id/email_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="text"
        android:hint="@string/email_msg_placeholder"/>

    <EditText
        android:id="@+id/email_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="smtp.gmail.com"
        android:hint="@string/host_smtp_placeholder"/>

    <EditText
        android:id="@+id/email_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="587"
        android:hint="@string/port_smtp_placeholder"/>

    <EditText
        android:id="@+id/email_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        android:hint="@string/email_sender_placeholder"/>

    <EditText
        android:id="@+id/email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/password_placeholder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/send_email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_email"
            android:onClick="onSendMailClick"/>

        <Button
            android:id="@+id/scan_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scan_code"
            android:onClick="onScanCodeClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/print"
            android:onClick="onPrintClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stt_goto"
            android:onClick="onSttClick"/>
    </LinearLayout>

    <TextView
        android:id="@+id/barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </androidx.camera.view.PreviewView>

</LinearLayout>
